--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.13.0",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@types/node": "^17.0.6",
     "@vitejs/plugin-vue": "^2.0.0",
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "sass": "^1.45.2",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
